# hello-world-cli

./: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/hello-world/: index.html  package.json  vite.config.ts
apps/hello-world/public/: install-cli.ps1  install-cli.sh  install.ps1  install.sh
apps/hello-world/src/: App.tsx
apps/hello-world/src-tauri/: Cargo.toml  tauri.conf.json
apps/hello-world/src-tauri/icons/: icon.icns
apps/hello-world/src-tauri/src/: main.rs
crates/hello-world-cli/: Cargo.toml
crates/hello-world-cli/src/: main.rs
docs/: README.md  cli-distribution.md  custom-protocol.md  mock-cli.md  mock-rust-cli.md  packaging.md
scripts/: install-mock-cli.mjs  prepare-cli-distribution.mjs  prepare-cli-distribution.sh
src/: App.tsx
