[package]
name = "hello-tauri"
version = "0.1.0"
description = "A minimal Tauri app"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
